make delete/restore button bypass HTML form required attributes

--- a/admin/css/audio-list-admin.css
+++ b/admin/css/audio-list-admin.css
@@ -14,3 +14,17 @@
 .top {
   vertical-align: top;
 }
+
+.button.red {
+  background-color: red;
+}
+
+.button.orange {
+  background-color: orange;
+}
+
+.form-container {
+    display: flex;
+    align-items: end;
+}
+
