making uploading AWS screct and keys in wp-config.php optional since newly installed plugin users may chose not to use AWS function

--- a/admin/css/audio-list-admin.css
+++ b/admin/css/audio-list-admin.css
@@ -15,6 +15,10 @@
   vertical-align: top;
 }
 
+.vertical-baseline-middle {
+  vertical-align: -webkit-baseline-middle;
+}
+
 .button.red {
   background-color: red;
 }
