--- a/public/css/audio-list-public.css
+++ b/public/css/audio-list-public.css
@@ -2,3 +2,8 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+
+details summary.underline-pointer {
+	text-decoration: underline;
+	cursor: pointer;
+}
