make text align left since the text is aligned center on current prod

--- a/public/css/audio-list-public.css
+++ b/public/css/audio-list-public.css
@@ -3,7 +3,8 @@
  * included in this file.
  */
 
-details summary.underline-pointer {
+ul.audio-list summary.underline-pointer {
 	text-decoration: underline;
 	cursor: pointer;
+	text-align: left;
 }
