unwillingly adding since all css on prod are important, so that summary/details can format well

--- a/public/css/audio-list-public.css
+++ b/public/css/audio-list-public.css
@@ -4,10 +4,11 @@
  */
 
 ul.audio-list summary.underline-pointer {
-	text-decoration: underline;
-	cursor: pointer;
+  text-decoration: underline !important;
+  cursor: pointer !important;
+  text-align: center !important;
 }
 
 ul.audio-list details.align-left {
-	text-align: left;
+  text-align: left !important;
 }
